[tool.poetry]
name = "fast-runner"
version = "0.1.0"
description = ""
authors = ["Frank Becker <becke@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
