[tool.poetry]
name = "vogeltv"
version = "0.1.0"
description = ""
authors = ["Frank Becker <fb@alien8.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
jinja2 = "^3.1.3"
aiofiles = "^23.2.1"
simple-dwd-weatherforecast = "^2.0.29"
dvb = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
